css/responsive.css
/* Mobile */
@media screen and (width <= 480px) {
    /* Container */
    .container {
        width: 100%;
    }
    /* Riga */
    .row {
        flex-direction: column;
    }
    /* Sezione "Lessons" */
    .lessons {
        padding-bottom: 3rem;
    }
    /* Colonne della sezione "Lessons" */
    .lessons .col {
        width: 100%;
    }
    /* Prima colonna della sezione "Lessons" */
    .lessons .row .col:first-child {
        margin-bottom: 3rem;
    }
    /* Sezione "Steps" */
    .steps {
        margin: 0px;
    }
    /* Colonne della sezione "Steps" */
    .steps .col {
        width: 100%;
    }
    /* Seconda colonna della sezione "Steps" */
    .steps .row .col:nth-child(2) {
        margin: 3rem 0rem;
    }
    /* Sezione "Why-us" */
    .why-us {
        background-color: #222222;
        padding: 3rem 0px;
        margin-bottom: 0px;
    }
    /* Colonne della sezione "Why-us" */
    .why-us .col {
        width: 100%;
    }
    /* Colonna sinistra di "Why-us" */
    .why-us .col-left {
        margin-bottom: 3rem;
    }
}

/* Tablet */
@media screen and ((width > 480px) and (width <= 768px)) {
    /* Container */
    .container {
        width: 100%;
    }
}

/* Bonus */
@media screen and ((width > 768px) and (width <= 1160px)) {
    /* Container */
    .container {
        width: 100%;
    }
}

